ExtraUtilitiesBuilder/.gradle/gradle.log
****************************
 Powered By MCP:             
 http://modcoderpack.com/    
 Searge, ProfMobius, Fesh0r, 
 R4wk, ZeuX, IngisKahn, bspkrs
 MCP Data version : unknown
****************************
:downloadClient SKIPPED
:downloadServer SKIPPED
:getVersionJson
:extractUserDev UP-TO-DATE
:mergeJars SKIPPED
:applyBinPatches SKIPPED
:downloadMcpTools SKIPPED
:extractMcpData UP-TO-DATE
:genSrgs SKIPPED
:deobfBinJar SKIPPED
:compileApiJava UP-TO-DATE
:processApiResources UP-TO-DATE
:apiClasses UP-TO-DATE
:sourceMainJava
:compileJavawarning: [options] bootstrap class path not set in conjunction with -source 1.6
/home/fracica/ksrc/ExtraUtilities/ExtraUtilitiesBuilder/build/sources/java/com/rwtema/extrautils/core/MiscHelper.java:73: error: unreachable statement
            break;
            ^
/home/fracica/ksrc/ExtraUtilities/ExtraUtilitiesBuilder/build/sources/java/com/rwtema/extrautils/block/BlockPeacefulTable.java:99: error: incompatible types: Object cannot be converted to EntityLiving
                    t = var7.entityClass.getConstructor(World.class).newInstance(world);
                                                                                ^
/home/fracica/ksrc/ExtraUtilities/ExtraUtilitiesBuilder/build/sources/java/com/rwtema/extrautils/block/BlockCursedEarth.java:223: error: incompatible types: Entity cannot be converted to EntityLiving
            final EntityLiving entityliving = (entity instanceof EntityLiving) ? entity : null;
                                                                               ^
/home/fracica/ksrc/ExtraUtilities/ExtraUtilitiesBuilder/build/sources/java/com/rwtema/extrautils/block/BlockCursedEarth.java:265: error: incompatible types: Object cannot be converted to EntityLiving
                            t = var13.entityClass.getConstructor(World.class).newInstance(world);
                                                                                         ^
/home/fracica/ksrc/ExtraUtilities/ExtraUtilitiesBuilder/build/sources/java/com/rwtema/extrautils/nei/SoulHandler.java:67: error: constructor CachedRecipe in class TemplateRecipeHandler.CachedRecipe cannot be applied to given types;
            super((TemplateRecipeHandler)SoulHandler.this);
            ^
  required: no arguments
  found: TemplateRecipeHandler
  reason: actual and formal argument lists differ in length
/home/fracica/ksrc/ExtraUtilities/ExtraUtilitiesBuilder/build/sources/java/com/rwtema/extrautils/nei/FMPMicroBlocksHandler.java:75: error: no suitable method found for get(Object)
                        for (final ItemStack stack : ItemList.itemMap.get((Object)item)) {
                                                                     ^
    method Multimap.get(Item) is not applicable
      (argument mismatch; Object cannot be converted to Item)
    method ListMultimap.get(Item) is not applicable
      (argument mismatch; Object cannot be converted to Item)
/home/fracica/ksrc/ExtraUtilities/ExtraUtilitiesBuilder/build/sources/java/com/rwtema/extrautils/modintegration/TConIntegration.java:192: error: cannot access CraftingItem
                if (!(recipe.getResult().getItem() instanceof DynamicToolPart)) {
                                                   ^
  class file for mantle.items.abstracts.CraftingItem not found
/home/fracica/ksrc/ExtraUtilities/ExtraUtilitiesBuilder/build/sources/java/com/rwtema/extrautils/modintegration/TConIntegration.java:257: error: incomparable types: Item and DualMaterialToolPart
                if (castingRecipe.output.getItem() != TinkerWeaponry.partBolt) {
                                                   ^
/home/fracica/ksrc/ExtraUtilities/ExtraUtilitiesBuilder/build/sources/java/com/rwtema/extrautils/command/CommandKillNonPersistant.java:20: error: cannot find symbol
            if (!(  ( (Entity)world.loadedEntityList.get(i) ).isNoDespawnRequired())  ) {
                                                             ^
  symbol:   method isNoDespawnRequired()
  location: class Entity
/home/fracica/ksrc/ExtraUtilities/ExtraUtilitiesBuilder/build/sources/java/com/rwtema/extrautils/tileentity/transfernodes/multiparts/TilePartMetaAccess.java:31: error: cannot find symbol
        return super.getTileEntity(i, j, k);
                    ^
  symbol: method getTileEntity(int,int,int)
/home/fracica/ksrc/ExtraUtilities/ExtraUtilitiesBuilder/build/sources/java/com/rwtema/extrautils/dynamicgui/WidgetSlotDisablable.java:31: error: incompatible types: Object cannot be converted to boolean
            return (boolean)this.inventory.getClass().getMethod(this.methodName, (Class<?>[])new Class[0]).invoke(this.inventory);
                                                                                                                 ^
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
11 errors
1 warning
 FAILED

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output.

BUILD FAILED

Total time: 11.015 secs
